# ssi

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  FFI.md  Makefile  NOTICE  QUEN.md  README.md  cbindgen.toml  cliff.toml  deny.toml  holder.md  issue.md
.cargo/: config.toml
.github/: pull_request_template.md
accumulator-common/: Cargo.toml
accumulator-common/src/: error.rs  lib.rs  macros.rs
accumulator-common/src/bigint/: mod.rs  mpz.rs  ossl.rs  rust.rs
accumulator-ecc/: Cargo.toml  README.md
accumulator-ecc/src/: accumulator.rs  error.rs  key.rs  lib.rs  macros.rs  proof.rs  witness.rs
accumulator-rsa/: Cargo.toml  README.md
accumulator-rsa/src/: accumulator.rs  hash.rs  key.rs  lib.rs  proofmem.rs  proofnon.rs  witnessmem.rs  witnessnon.rs
android/: AndroidManifest.xml  README.md
c/: README.md  test.c
cacao_zcap/: Cargo.toml
cacao_zcap/examples/: regenerate-test-vectors.rs
cacao_zcap/src/: core.rs  lib.rs  proof.rs
cacao_zcap/src/translation/: cacao_to_zcap.rs  mod.rs  zcap_to_cacao.rs
caips/: Cargo.toml
caips/src/: caip10.rs  caip2.rs
cbindings/: Cargo.toml  README.md  build.rs
contexts/: Cargo.toml  LICENSES.md  README.md  aleovm.jsonld  big-plato-vocab.jsonld  cacao-zcap-v1.jsonld  clr-2.0.json  did-configuration-v1.jsonld  dif-lds-ecdsa-secp256k1-recovery2020-0.0.jsonld  eip712sig-v0.1.jsonld  eip712sig-v1.jsonld  eip712vm.jsonld  epsig-v0.1.jsonld  esrs2020-extra-0.0.jsonld  esrs2020-extra.jsonld  jff-vc-edu-plugfest-1-context.json  jff-vc-edu-plugfest-2-context.json  linked-vp-v1.jsonld  openbadges-v3-extensions.json  openbadges-v3.0.1.json  presentation-submission.jsonld  tz-2021-v1.jsonld  update.sh  w3c-ccg-traceability-v1.jsonld  w3c-did-resolution-v1.jsonld  w3id-data-integrity-v1.jsonld  w3id-multikey-v1.jsonld  w3id-secp256k1recovery2020-v2.jsonld  w3id-vdl-v1.jsonld
did-ethr/: Cargo.toml
did-ethr/src/: json_ld_context.rs  lib.rs
did-ethr/tests/: did-pk.jsonld  vc.jsonld
did-ion/: Cargo.toml
did-ion/src/: lib.rs  sidetree.rs
did-ion/src/sidetree/: client.rs  did.rs  mod.rs  resolver.rs
did-ion/src/sidetree/operation/: recover.rs
did-jwk/: Cargo.toml
did-jwk/src/: lib.rs
did-key/: Cargo.toml  README.md
did-key/src/: json_ld_context.rs  lib.rs
did-onion/: Cargo.toml  README.md
did-onion/src/: lib.rs
did-pkh/: Cargo.toml  README.md  did-pkh-method-draft.md
did-pkh/src/: json_ld_context.rs  lib.rs
did-pkh/tests/: did-btc-legacy.jsonld  did-btc.jsonld  did-celo.jsonld  did-doge.jsonld  did-eth.jsonld  did-poly.jsonld  did-sol-legacy.jsonld  did-sol.jsonld  did-tz1.jsonld  did-tz2.jsonld  did-tz3.jsonld  vc-eth-eip712sig.jsonld  vc-eth-eip712vm.jsonld  vc-eth-epsig.jsonld  vc-poly-eip712sig.jsonld  vc-poly-epsig.jsonld
did-resolve/: Cargo.toml
did-resolve/src/: lib.rs
did-sol/: Cargo.toml  README.md
did-sol/src/: lib.rs
did-sol/tests/: did.jsonld
did-test/: Cargo.toml
did-test/src/: main.rs
did-tezos/: Cargo.toml  README.md
did-tezos/contract/: did.religo
did-tezos/src/: explorer.rs  lib.rs  prefix.rs
did-tezos/taquito/: README.md  originate.js  package.json
did-tezos/tests/: did.rs
did-web/: Cargo.toml  README.md
did-web/src/: lib.rs
did-webkey/: Cargo.toml  README.md
did-webkey/src/: lib.rs
did-webkey/tests/: ssh_keys  user.gpg
examples/: cacao-zcap-regenerate-test-vectors.rs  clr-embed.jsonld  did-test-suite.rs  genaleojwk.rs  issue-revocation-list.rs  issue-status-list.rs  issue.rs  present.rs  resolve_with_provider.rs  vc-clr-invalid-schema.jsonld  vc-clr.jsonld  vc-jws2020-bad-type-json.jsonld  vc-jws2020-bad-type.jsonld  vc-jws2020.jsonld  vc.jsonld  vc.jwt  vc_parse.rs  vc_verify.rs  vp-jwtvc.jsonld  vp.jsonld  vp.jwt  zcap_delegation.jsonld  zcap_invocation.jsonld
flutter/: README.md  pubspec.yaml
java/: README.md
jwk/: Cargo.toml
jwk/src/: aleo.rs  der.rs  error.rs  lib.rs
pairings/: .travis.yml  COPYRIGHT  Cargo.toml
src/: aleo.rs  bbs.rs  blakesig.rs  caip10.rs  caip2.rs  der.rs  did.pest  did.rs  did_resolve.rs  eip712.rs  error.rs  hash.rs  jsonld.rs  jwk.rs  jws.rs  jwt.rs  keccak_hash.rs  ldp.rs  lib.rs  one_or_many.rs  passthrough_digest.rs  prelude.rs  rdf.rs  ripemd.rs  (+8 more)
ssi-caips/: Cargo.toml
ssi-caips/src/: caip10.rs  caip2.rs  lib.rs
ssi-cborld/: Cargo.toml
ssi-cborld/src/: lib.rs
ssi-core/: Cargo.toml
ssi-core/src/: futures.rs  lib.rs  one_or_many.rs  uri.rs
ssi-core/src/futures/: bound.rs  lending.rs
ssi-crypto/: Cargo.toml
ssi-crypto/src/: algorithm.rs  lib.rs  protocol.rs  signature.rs  verification.rs
ssi-crypto/src/hashes/: keccak.rs  mod.rs  passthrough_digest.rs  ripemd160.rs  sha256.rs
ssi-crypto/src/signatures/: mod.rs
ssi-dids/: Cargo.toml
ssi-dids/src/: did.rs  did_resolve.rs  document.rs  error.rs  lib.rs  parser.rs  resolution.rs  verification_relationship.rs  verifier.rs
ssi-dids/src/did/: url.rs
ssi-dids/src/did/url/: primary.rs
ssi-dids/src/document/: representation.rs  resource.rs  service.rs  verification_method.rs
ssi-dids/src/document/representation/: json.rs  json_ld.rs
ssi-dids/src/registration/: mod.rs
ssi-dids/src/resolution/: composition.rs  dereference.rs  http.rs
ssi-dids/tests/: did-example-bbs.json  did-example-foo.json
ssi-dids/tests/vectors/: did-example-12345.json  did-example-bar.json
ssi-json-ld/: Cargo.toml
ssi-json-ld/src/: error.rs  lib.rs  rdf.rs  urdna2015.rs
ssi-jwk/: Cargo.toml
ssi-jwk/src/: aleo.rs  algorithm.rs  blakesig.rs  der.rs  eip155.rs  error.rs  lib.rs  multicodec.rs  ripemd160.rs
ssi-jws/: Cargo.toml
ssi-jws/src/: error.rs  lib.rs
ssi-jws/src/cli/src/: main.rs
ssi-jwt/: Cargo.toml
ssi-jwt/src/: lib.rs
ssi-jwt/src/datatype/: numeric_date.rs
ssi-ldp/: Cargo.toml
ssi-ldp/examples/: sign.rs  sign.tldr
ssi-ldp/src/: context.rs  eip712.rs  error.rs  lib.rs  proof.rs  suite.rs  suites.rs
ssi-ldp/src/suite/: ed25519_signature_2020.rs
ssi-ldp/src/suites/: aleo.rs  dataintegrity.rs  eip.rs  mod.rs  secp256k1.rs  solana.rs  tezos.rs  w3c.rs
ssi-multicodec/: Cargo.toml  build.rs
ssi-multicodec/src/: lib.rs  table.rs
(+1117 files in other folders)
