[package]
name = "ssi"
version = "0.7.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Core library for Verifiable Credentials and Decentralized Identifiers."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi/"
keywords = ["ssi", "did", "vc", "vp", "jsonld"]

exclude = ["json-ld-api/*", "json-ld-normalization/*", "vc-test-suite/*"]

# [features]
# # default = ["w3c", "ripemd-160", "eip", "tezos"]

# # w3c = ["ssi-ldp/w3c", "secp256k1", "ed25519", "secp256r1", "rsa"]
# # ## enable secp256k1 signatures
# # secp256k1 = ["ssi-ldp/secp256k1"]
# # ## enable secp256r1 (p256) signatures
# # secp256r1 = ["ssi-ldp/secp256r1"]
# # ## enable secp384r1 (p384) signatures
# # secp384r1 = ["ssi-ldp/secp384r1"]
# # ## enable ed25519 (EdDSA) signatures
# # ed25519 = ["ssi-ldp/ed25519", "ssi-jwk/ed25519", "ssi-jws/ed25519"]
# # ## enable RSA signatures
# # rsa = ["ssi-ldp/rsa"]
# # ## enable ripemd hashes
# # ripemd-160 = ["ssi-jwk/ripemd-160"]
# # ## enable bbs
# # bbs = ["ssi-crypto/bbs"]

# # ## enable aleo ecosystem signatures
# # aleo = ["ssi-ldp/aleo", "ssi-caips/aleo", "ssi-jws/aleo"]
# # ## enable ethereum style signatures
# # eip = ["ssi-caips/eip", "ssi-jwk/eip", "ssi-ldp/eip", "ssi-crypto/keccak"]
# # ## enable tezos style signatures
# # tezos = ["ssi-caips/tezos", "ssi-jwk/tezos", "ssi-jws/tezos", "ssi-ldp/tezos"]
# # ## enable LDPs from the Solana Ecosystem
# # solana = ["ssi-ldp/solana"]

# # ## Use the Ring crate for crypto operations
# # ring = ["ssi-jwk/ring", "ssi-jws/ring", "ssi-crypto/ring"]

# # http-did = ["ssi-dids/http"]
# # example-http-issuer = ["ssi-ldp/example-http-issuer"]

# # # Backward compatibility features
# # ed25519-dalek = ["ed25519"]
# # keccak = ["eip"]
# # sha = ["rsa"]

[dependencies]
ssi-vc.workspace = true
# # ssi-jwk = { path = "./ssi-jwk", version = "0.1", default-features = false }
# # ssi-json-ld = { path = "./ssi-json-ld", version = "0.2", default-features = false }
# # ssi-core = { path = "./ssi-core", version = "0.1" }
# # ssi-dids = { path = "./ssi-dids", version = "0.1" }
# # ssi-crypto = { path = "./ssi-crypto", version = "0.1", default-features = false }
# # ssi-jws = { path = "./ssi-jws", version = "0.1", default-features = false }
# # ssi-jwt = { path = "./ssi-jwt", version = "0.1", default-features = false }
# # ssi-tzkey = { path = "./ssi-tzkey", version = "0.1", default-features = false }
# # ssi-ldp = { path = "./ssi-ldp", version = "0.2", default-features = false }
# # ssi-ssh = { path = "./ssi-ssh", version = "0.1", default-features = false }
# # ssi-ucan = { path = "./ssi-ucan", version = "0.1" }
# ssi-vc.workspace = true
# # ssi-zcap-ld = { path = "./ssi-zcap-ld", version = "0.1" }
# # ssi-caips = { path = "./ssi-caips", version = "0.1", default-features = false }

[workspace]
members = [
  "did-tezos",
  "did-jwk",
  "did-key",
  "did-web",
  "did-ethr",
  # "did-sol",
  "did-pkh",
  # "did-onion",
  "did-ion",
  # "did-webkey",
  # "vc-test",
  # "did-test",
  "ssi-caips",
  "ssi-multicodec",
  "ssi-jwk",
  "ssi-core",
  "ssi-crypto",
  "ssi-json-ld",
  "ssi-dids",
  "ssi-jws",
  "ssi-jwt",
  "ssi-tzkey",
  "ssi-eip712",
  # "ssi-ssh",
  # "ssi-ucan",
  "ssi-rdf",
  "ssi-verification-methods",
  "ssi-security",
  "ssi-vc",
  "ssi-vc-jwt",
  "ssi-vc-ldp",
  # "ssi-zcap-ld",
  "ssi-top"
]

[workspace.dependencies]
ssi-core = { path = "./ssi-core", version = "0.1" }
ssi-multicodec = { path = "./ssi-multicodec", version = "0.1" }
ssi-crypto = { path = "./ssi-crypto", version = "0.1" }
ssi-verification-methods = { path = "./ssi-verification-methods", version = "0.1" }
ssi-jwk = { path = "./ssi-jwk", version = "0.1", default-features = false }
ssi-jws = { path = "./ssi-jws", version = "0.1", default-features = false }
ssi-jwt = { path = "./ssi-jwt", version = "0.1" }
ssi-tzkey = { path = "./ssi-tzkey", version = "0.1" }
ssi-eip712 = { path = "./ssi-eip712", version = "0.1" }
ssi-rdf = { path = "./ssi-rdf", version = "0.1" }
ssi-json-ld = { path = "./ssi-json-ld", version = "0.2.2" }
ssi-dids = { path = "./ssi-dids", version = "0.1" }
ssi-security = { path = "./ssi-security", version = "0.1" }
ssi-caips = { path = "./ssi-caips", version = "0.1" }
ssi-vc = { path = "./ssi-vc", version = "0.2" }
ssi-vc-ldp = { path = "./ssi-vc-ldp", version = "0.3" }
ssi-top = { path = "./ssi-top", version = "0.1" }
async-trait = "0.1.68"
thiserror = "1.0.40"
chrono = "0.4.24"
iref = "3.1.2"
static-iref = "3.0"
rdf-types = "0.18"
# xsd-types = "0.7.6"
xsd-types = { git = "https://github.com/timothee-haudebourg/xsd-types.git" }
grdf = "0.22"
locspan = "0.8"
json-syntax = "0.10"
nquads-syntax = "0.17"
multibase = "0.9.1"
# json-ld = "0.15"
json-ld = { git = "https://github.com/timothee-haudebourg/json-ld.git" }
serde = "1.0"
serde_json = "1.0"
serde_jcs = "0.1.0"
hex = "0.4.3"
derivative = "2.2.0"
educe = "0.4.22"
pin-project = "1.1.3"
futures = "0.3.28"
linked-data = { git = "https://github.com/spruceid/linked-data-rs.git" }
rand_chacha = "0.3.1"
contextual = "0.1.6"
lazy_static = "1.4.0"

# [dev-dependencies]
# async-std = { version = "1.9", features = ["attributes"] }
# uuid = { version = "0.8", features = ["v4", "serde"] }
# serde_json = "1.0"
# ssi-dids = { path = "./ssi-dids", version = "0.1", features = ["example"] }

# [package.metadata.docs.rs]
# all-features = true
# rustdoc-args = ["--cfg", "docsrs"]

# # $cargo release
# [workspace.metadata.release]
# sign-tag = true
# tag-prefix = "{{crate_name}}/"
# tag-message = "Release {{crate_name}} version {{version}}."
# pre-release-commit-message = "Release"

# # $git-cliff --config Cargo.toml > CHANGELOG.md
# [workspace.metadata.git-cliff.changelog]
# header = """
# # Changelog
# All notable changes to this project will be documented in this file.

# The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
# and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

# """
# body = """
# {% if version %}\
#     ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
# {% else %}\
#     ## [Unreleased]
# {% endif %}\
# {% for group, commits in commits | group_by(attribute="group") %}
#     ### {{ group | upper_first }}\
#     {% for commit in commits %}
#         - [{{ commit.id | truncate(length=7, end="") }}] {{ commit.message }}\
#     {% endfor %}
# {% endfor %}\n
# """
# trim = true
# [workspace.metadata.git-cliff.git]
# commit_preprocessors = [
#   { pattern = "\\n.*", replace = ""},
# ]
# conventional_commits = false
# filter_unconventional = false
# commit_parsers = [
#   { message = "^[aA]dd( |ed)", group = "Added"},
#   { message = "^[fF]ix", group = "Fixed"},
#   { message = "^[cC]hange", group = "Changed"},
#   { message = "^[mM]ove", group = "Changed"},
#   { message = "^[rR]estructure", group = "Changed"},
#   { message = "^[rR]efactor", group = "Changed"},
#   { message = "^[rR]emove", group = "Removed"},
#   { message = ".*", group = "Other"},
# ]
# # filter_commits = false
# tag_pattern = "v[0-9]*"

[patch.crates-io]
rdf-types = { git = "https://github.com/timothee-haudebourg/rdf-types.git" }