[package]
name = "caips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
ssi-jwk = { path = "../ssi-jwk", version = "0.1"}
bs58 = { version = "0.4", features = ["check"] }

[dev-dependencies]
serde_json = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
