[package]
name = "did-ethr"
version = "0.1.1"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
keywords = ["ssi", "did", "ethereum"]
categories = ["cryptography::cryptocurrencies"]
description = "did:ethr DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-ethr/"
documentation = "https://docs.rs/did-ethr/"

[features]

[dependencies]
ssi-dids = { path = "../ssi-dids" }
caips = { path = "../caips" }
ssi-crypto = { path = "../ssi-crypto" }
ssi-jwk = { path = "../ssi-jwk" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
