[package]
name = "did-ethr"
version = "0.2.1"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did", "ethereum"]
categories = ["cryptography::cryptocurrencies"]
description = "did:ethr DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-ethr/"
documentation = "https://docs.rs/did-ethr/"

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false, features = ["eip"] }
ssi-crypto = { path = "../ssi-crypto", version = "0.1", default-features = false, features = ["secp256k1"] }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["eip"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
ssi-vc = { path = "../ssi-vc", default-features = false }
ssi-json-ld = { path = "../ssi-json-ld", default-features = false }
ssi-ldp = { path = "../ssi-ldp", default-features = false, features = ["tezos", "eip"] }
ssi-core = { path = "../ssi-core", default-features = false }
