[package]
name = "did-ion"
version = "0.2.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["web-programming::http-client"]
description = "did:ion DID method implementation, using the ssi crate and ION/Sidetree REST API"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-ion/"
documentation = "https://docs.rs/did-ion/"

[features]
default = ["secp256k1", "secp256r1", "ed25519", "rsa"]
secp256r1 = ["ssi-jws/secp256r1"]
secp256k1 = ["ssi-jws/secp256k1"]
ed25519 = ["ssi-jws/ed25519"]
rsa = ["ssi-jws/rsa"]

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1", features = ["http"] }
ssi-core = { path = "../ssi-core", version = "0.1" }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
ssi-jws = { path = "../ssi-jws", version = "0.1", default-features = false }
ssi-jwt = { path = "../ssi-jwt", version = "0.1", default-features = false }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.12"
sha2 = "0.10"
json-patch = "0.2.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.11"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
lazy_static = "1.4"
