[package]
name = "did-jwk"
version = "0.1.1"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["cryptography::cryptocurrencies"]
description = "did:jwk DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-jwk/"
documentation = "https://docs.rs/did-jwk/"

[features]
default = ["secp256k1", "secp256r1"]
secp256k1 = ["ssi-jwk/secp256k1"]
secp256r1 = ["ssi-jwk/secp256r1"]
ed25519 = ["ssi-jwk/ed25519"]

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
async-trait = "0.1"
multibase = "0.8"
serde_json = "1.0"
serde_jcs = "0.1"
iref = "2.2"
static-iref = "2.0"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
