[package]
name = "did-jwk"
version = "0.1.1"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["cryptography::cryptocurrencies"]
description = "did:jwk DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-jwk/"
documentation = "https://docs.rs/did-jwk/"

[features]
default = ["secp256k1", "secp256r1"]
secp256k1 = ["ssi-jwk/secp256k1"]
secp256r1 = ["ssi-jwk/secp256r1"]
ed25519 = ["ssi-jwk/ed25519"]

[dependencies]
ssi-crypto.workspace = true
ssi-dids.workspace = true
ssi-jwk.workspace = true
ssi-verification-methods.workspace = true
async-trait.workspace = true
multibase = "0.8"
serde_json.workspace = true
serde_jcs = "0.1"
iref.workspace = true
static-iref.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
