[package]
name = "did-method-key"
version = "0.1.2"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["cryptography::cryptocurrencies"]
description = "did:key DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-key/"
documentation = "https://docs.rs/did-key/"

[features]
secp256k1 = ["k256", "ssi/secp256k1"]
secp256r1 = ["p256", "ssi/secp256r1"]

[dependencies]
ssi = { version = "0.3", path = "../", default-features = false }
async-trait = "0.1"
thiserror = "1.0"
multibase = "0.8"
k256 = { version = "0.9.6", optional = true, features = ["zeroize", "ecdsa"] }
p256 = { version = "0.9.0", optional = true, features = ["zeroize", "ecdsa"] }
serde_json = "1.0"
simple_asn1 = "^0.5.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.9", features = ["attributes"] }
serde_json = "1.0"
