[package]
name = "did-method-key"
version = "0.2.2"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["cryptography::cryptocurrencies"]
description = "did:key DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-key/"
documentation = "https://docs.rs/did-key/"

[features]
default = ["secp256k1", "secp256r1"]
secp256k1 = ["k256", "ssi-jwk/secp256k1"]
secp256r1 = ["p256", "ssi-jwk/secp256r1"]
secp384r1 = ["ssi-jwk/secp384r1"]

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = [
  "ripemd-160",
] }
ssi-crypto = { path = "../ssi-crypto", default-features = false, version = "0.1" }
async-trait = "0.1"
thiserror = "1.0"
multibase = "0.8"
k256 = { version = "0.13.1", optional = true, features = ["ecdsa"] }
p256 = { version = "0.13.2", optional = true, features = ["ecdsa"] }
serde_json = "1.0"
simple_asn1 = "^0.5.2"

[dev-dependencies]
ssi-vc = { path = "../ssi-vc" }
ssi-ldp = { path = "../ssi-ldp" }
ssi-json-ld = { path = "../ssi-json-ld" }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.9", features = ["attributes"] }
serde_json = "1.0"
